gramaticaFinal/traductor/parser.out


Unused terminals:


Grammar

Rule 1     s -> resto sig1
Rule 2     s -> sig1
Rule 3     sig1 -> global resto sig2
Rule 4     global -> PUNTO GLOBAL ETIQUETA
Rule 5     sig2 -> PUNTO DATA resto listazonadata
Rule 6     sig2 -> sig3
Rule 7     listazonadata -> tipodata listazonadata
Rule 8     listazonadata -> tipodata sig3
Rule 9     tipodata -> equ rzd
Rule 10    tipodata -> word listaword resto
Rule 11    rzd -> ENTERO resto
Rule 12    rzd -> ENTERONEGATIVO resto
Rule 13    rzd -> DIRHEXA resto
Rule 14    equ -> PUNTO EQU ETIQUETA COMA
Rule 15    word -> ETIQUETA DP PUNTO WORD
Rule 16    listaword -> DIRHEXA COMA listaword
Rule 17    listaword -> DIRHEXA
Rule 18    listaword -> ENTERO COMA listaword
Rule 19    listaword -> ENTERO
Rule 20    listaword -> ENTERONEGATIVO COMA listaword
Rule 21    listaword -> ENTERONEGATIVO
Rule 22    sig3 -> PUNTO BSS resto listazonabss sig4
Rule 23    sig3 -> sig4
Rule 24    listazonabss -> ETIQUETA DP PUNTO SPACE enterohexa resto listazonabss
Rule 25    listazonabss -> ETIQUETA DP PUNTO SPACE enterohexa resto
Rule 26    enterohexa -> ENTERO
Rule 27    enterohexa -> DIRHEXA
Rule 28    sig4 -> PUNTO TEXT resto inst resto
Rule 29    inst -> ETIQUETA DP resto inst
Rule 30    inst -> ETIQUETA DP instruccion resto inst
Rule 31    inst -> instruccion resto inst
Rule 32    inst -> fin
Rule 33    instruccion -> AND REGISTRO COMA REGISTRO COMA REGISTRO
Rule 34    instruccion -> AND REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
Rule 35    instruccion -> AND REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
Rule 36    instruccion -> AND REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
Rule 37    instruccion -> AND REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
Rule 38    instruccion -> ORR REGISTRO COMA REGISTRO COMA REGISTRO
Rule 39    instruccion -> ORR REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
Rule 40    instruccion -> ORR REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
Rule 41    instruccion -> ORR REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
Rule 42    instruccion -> ORR REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
Rule 43    instruccion -> EOR REGISTRO COMA REGISTRO COMA REGISTRO
Rule 44    instruccion -> EOR REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
Rule 45    instruccion -> EOR REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
Rule 46    instruccion -> EOR REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
Rule 47    instruccion -> EOR REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
Rule 48    instruccion -> ADD REGISTRO COMA REGISTRO COMA REGISTRO
Rule 49    instruccion -> ADD REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
Rule 50    instruccion -> ADD REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
Rule 51    instruccion -> ADD REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
Rule 52    instruccion -> ADD REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
Rule 53    instruccion -> SUB REGISTRO COMA REGISTRO COMA REGISTRO
Rule 54    instruccion -> SUB REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
Rule 55    instruccion -> SUB REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
Rule 56    instruccion -> SUB REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
Rule 57    instruccion -> SUB REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
Rule 58    instruccion -> RSB REGISTRO COMA REGISTRO COMA REGISTRO
Rule 59    instruccion -> RSB REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
Rule 60    instruccion -> RSB REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
Rule 61    instruccion -> RSB REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
Rule 62    instruccion -> RSB REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
Rule 63    instruccion -> MOV REGISTRO COMA REGISTRO
Rule 64    instruccion -> MOV REGISTRO COMA ALMOADILLA DIRHEXA
Rule 65    instruccion -> MOV REGISTRO COMA ALMOADILLA ENTERO
Rule 66    instruccion -> MOV REGISTRO COMA ALMOADILLA ENTERONEGATIVO
Rule 67    instruccion -> MOV REGISTRO COMA ALMOADILLA ETIQUETA
Rule 68    instruccion -> CMP REGISTRO COMA REGISTRO
Rule 69    instruccion -> CMP REGISTRO COMA ALMOADILLA DIRHEXA
Rule 70    instruccion -> CMP REGISTRO COMA ALMOADILLA ENTERO
Rule 71    instruccion -> CMP REGISTRO COMA ALMOADILLA ENTERONEGATIVO
Rule 72    instruccion -> CMP REGISTRO COMA ALMOADILLA ETIQUETA
Rule 73    instruccion -> MUL REGISTRO COMA REGISTRO COMA REGISTRO
Rule 74    instruccion -> MLA REGISTRO COMA REGISTRO COMA REGISTRO
Rule 75    instruccion -> LDR REGISTRO COMA CA REGISTRO COMA REGISTRO CC
Rule 76    instruccion -> LDR REGISTRO COMA CA REGISTRO COMA ALMOADILLA DIRHEXA CC
Rule 77    instruccion -> LDR REGISTRO COMA CA REGISTRO COMA ALMOADILLA ENTERO CC
Rule 78    instruccion -> LDR REGISTRO COMA CA REGISTRO COMA ALMOADILLA ENTERONEGATIVO CC
Rule 79    instruccion -> LDR REGISTRO COMA CA REGISTRO CC
Rule 80    instruccion -> LDR REGISTRO COMA IGUAL ETIQUETA
Rule 81    instruccion -> LDR REGISTRO COMA ETIQUETA
Rule 82    instruccion -> STR REGISTRO COMA CA REGISTRO COMA REGISTRO CC
Rule 83    instruccion -> STR REGISTRO COMA CA REGISTRO COMA ALMOADILLA DIRHEXA CC
Rule 84    instruccion -> STR REGISTRO COMA CA REGISTRO COMA ALMOADILLA ENTERO CC
Rule 85    instruccion -> STR REGISTRO COMA CA REGISTRO COMA ALMOADILLA ENTERONEGATIVO CC
Rule 86    instruccion -> STR REGISTRO COMA CA REGISTRO CC
Rule 87    instruccion -> STR REGISTRO COMA ETIQUETA
Rule 88    instruccion -> B ETIQUETA
Rule 89    instruccion -> B PUNTO ENTERO
Rule 90    instruccion -> B PUNTO ENTERONEGATIVO
Rule 91    instruccion -> B PUNTO DIRHEXA
Rule 92    instruccion -> BEQ ETIQUETA
Rule 93    instruccion -> BEQ PUNTO ENTERO
Rule 94    instruccion -> BEQ PUNTO ENTERONEGATIVO
Rule 95    instruccion -> BEQ PUNTO DIRHEXA
Rule 96    instruccion -> BNE ETIQUETA
Rule 97    instruccion -> BNE PUNTO ENTERO
Rule 98    instruccion -> BNE PUNTO ENTERONEGATIVO
Rule 99    instruccion -> BNE PUNTO DIRHEXA
Rule 100   instruccion -> BHI ETIQUETA
Rule 101   instruccion -> BHI PUNTO ENTERO
Rule 102   instruccion -> BHI PUNTO ENTERONEGATIVO
Rule 103   instruccion -> BHI PUNTO DIRHEXA
Rule 104   instruccion -> BLS ETIQUETA
Rule 105   instruccion -> BLS PUNTO ENTERO
Rule 106   instruccion -> BLS PUNTO ENTERONEGATIVO
Rule 107   instruccion -> BLS PUNTO DIRHEXA
Rule 108   instruccion -> BGE ETIQUETA
Rule 109   instruccion -> BGE PUNTO ENTERO
Rule 110   instruccion -> BGE PUNTO ENTERONEGATIVO
Rule 111   instruccion -> BGE PUNTO DIRHEXA
Rule 112   instruccion -> BLT ETIQUETA
Rule 113   instruccion -> BLT PUNTO ENTERO
Rule 114   instruccion -> BLT PUNTO ENTERONEGATIVO
Rule 115   instruccion -> BLT PUNTO DIRHEXA
Rule 116   instruccion -> BGT ETIQUETA
Rule 117   instruccion -> BGT PUNTO ENTERO
Rule 118   instruccion -> BGT PUNTO ENTERONEGATIVO
Rule 119   instruccion -> BGT PUNTO DIRHEXA
Rule 120   instruccion -> BLE ETIQUETA
Rule 121   instruccion -> BLE PUNTO ENTERO
Rule 122   instruccion -> BLE PUNTO ENTERONEGATIVO
Rule 123   instruccion -> BLE PUNTO DIRHEXA
Rule 124   fin -> ETIQUETA DP B PUNTO resto PUNTO END
Rule 125   fin -> B PUNTO resto PUNTO END
Rule 126   resto -> FL resto
Rule 127   resto -> FL

Terminals, with rules where they appear

ADD                  : 48 49 50 51 52
ALMOADILLA           : 34 35 36 37 39 40 41 42 44 45 46 47 49 50 51 52 54 55 56 57 59 60 61 62 64 65 66 67 69 70 71 72 76 77 78 83 84 85
AND                  : 33 34 35 36 37
B                    : 88 89 90 91 124 125
BEQ                  : 92 93 94 95
BGE                  : 108 109 110 111
BGT                  : 116 117 118 119
BHI                  : 100 101 102 103
BLE                  : 120 121 122 123
BLS                  : 104 105 106 107
BLT                  : 112 113 114 115
BNE                  : 96 97 98 99
BSS                  : 22
CA                   : 75 76 77 78 79 82 83 84 85 86
CC                   : 75 76 77 78 79 82 83 84 85 86
CMP                  : 68 69 70 71 72
COMA                 : 14 16 18 20 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 64 65 66 67 68 69 70 71 72 73 73 74 74 75 75 76 76 77 77 78 78 79 80 81 82 82 83 83 84 84 85 85 86 87
DATA                 : 5
DIRHEXA              : 13 16 17 27 34 39 44 49 54 59 64 69 76 83 91 95 99 103 107 111 115 119 123
DP                   : 15 24 25 29 30 124
END                  : 124 125
ENTERO               : 11 18 19 26 35 40 45 50 55 60 65 70 77 84 89 93 97 101 105 109 113 117 121
ENTERONEGATIVO       : 12 20 21 36 41 46 51 56 61 66 71 78 85 90 94 98 102 106 110 114 118 122
EOR                  : 43 44 45 46 47
EQU                  : 14
ETIQUETA             : 4 14 15 24 25 29 30 37 42 47 52 57 62 67 72 80 81 87 88 92 96 100 104 108 112 116 120 124
FL                   : 126 127
GLOBAL               : 4
IGUAL                : 80
LDR                  : 75 76 77 78 79 80 81
MLA                  : 74
MOV                  : 63 64 65 66 67
MUL                  : 73
ORR                  : 38 39 40 41 42
PUNTO                : 4 5 14 15 22 24 25 28 89 90 91 93 94 95 97 98 99 101 102 103 105 106 107 109 110 111 113 114 115 117 118 119 121 122 123 124 124 125 125
REGISTRO             : 33 33 33 34 34 35 35 36 36 37 37 38 38 38 39 39 40 40 41 41 42 42 43 43 43 44 44 45 45 46 46 47 47 48 48 48 49 49 50 50 51 51 52 52 53 53 53 54 54 55 55 56 56 57 57 58 58 58 59 59 60 60 61 61 62 62 63 63 64 65 66 67 68 68 69 70 71 72 73 73 73 74 74 74 75 75 75 76 76 77 77 78 78 79 79 80 81 82 82 82 83 83 84 84 85 85 86 86 87
RSB                  : 58 59 60 61 62
SPACE                : 24 25
STR                  : 82 83 84 85 86 87
SUB                  : 53 54 55 56 57
TEXT                 : 28
WORD                 : 15
error                : 

Nonterminals, with rules where they appear

enterohexa           : 24 25
equ                  : 9
fin                  : 32
global               : 3
inst                 : 28 29 30 31
instruccion          : 30 31
listaword            : 10 16 18 20
listazonabss         : 22 24
listazonadata        : 5 7
resto                : 1 3 5 10 11 12 13 22 24 25 28 28 29 30 31 124 125 126
rzd                  : 9
s                    : 0
sig1                 : 1 2
sig2                 : 3
sig3                 : 6 8
sig4                 : 22 23
tipodata             : 7 8
word                 : 10


Parsing method: LALR


state 0

    (0) S' -> . s
    (1) s -> . resto sig1
    (2) s -> . sig1
    (126) resto -> . FL resto
    (127) resto -> . FL
    (3) sig1 -> . global resto sig2
    (4) global -> . PUNTO GLOBAL ETIQUETA

    FL              shift and go to state 6
    PUNTO           shift and go to state 2


    sig1                           shift and go to state 3
    s                              shift and go to state 4
    global                         shift and go to state 1
    resto                          shift and go to state 5

state 1

    (3) sig1 -> global . resto sig2
    (126) resto -> . FL resto
    (127) resto -> . FL

    FL              shift and go to state 6


    resto                          shift and go to state 7

state 2

    (4) global -> PUNTO . GLOBAL ETIQUETA

    GLOBAL          shift and go to state 8



state 3

    (2) s -> sig1 .

    $end            reduce using rule 2 (s -> sig1 .)



state 4

    (0) S' -> s .




state 5

    (1) s -> resto . sig1
    (3) sig1 -> . global resto sig2
    (4) global -> . PUNTO GLOBAL ETIQUETA

    PUNTO           shift and go to state 2


    sig1                           shift and go to state 9
    global                         shift and go to state 1

state 6

    (126) resto -> FL . resto
    (127) resto -> FL .
    (126) resto -> . FL resto
    (127) resto -> . FL

    PUNTO           reduce using rule 127 (resto -> FL .)
    ETIQUETA        reduce using rule 127 (resto -> FL .)
    AND             reduce using rule 127 (resto -> FL .)
    ORR             reduce using rule 127 (resto -> FL .)
    EOR             reduce using rule 127 (resto -> FL .)
    ADD             reduce using rule 127 (resto -> FL .)
    SUB             reduce using rule 127 (resto -> FL .)
    RSB             reduce using rule 127 (resto -> FL .)
    MOV             reduce using rule 127 (resto -> FL .)
    CMP             reduce using rule 127 (resto -> FL .)
    MUL             reduce using rule 127 (resto -> FL .)
    MLA             reduce using rule 127 (resto -> FL .)
    LDR             reduce using rule 127 (resto -> FL .)
    STR             reduce using rule 127 (resto -> FL .)
    B               reduce using rule 127 (resto -> FL .)
    BEQ             reduce using rule 127 (resto -> FL .)
    BNE             reduce using rule 127 (resto -> FL .)
    BHI             reduce using rule 127 (resto -> FL .)
    BLS             reduce using rule 127 (resto -> FL .)
    BGE             reduce using rule 127 (resto -> FL .)
    BLT             reduce using rule 127 (resto -> FL .)
    BGT             reduce using rule 127 (resto -> FL .)
    BLE             reduce using rule 127 (resto -> FL .)
    $end            reduce using rule 127 (resto -> FL .)
    FL              shift and go to state 6


    resto                          shift and go to state 10

state 7

    (3) sig1 -> global resto . sig2
    (5) sig2 -> . PUNTO DATA resto listazonadata
    (6) sig2 -> . sig3
    (22) sig3 -> . PUNTO BSS resto listazonabss sig4
    (23) sig3 -> . sig4
    (28) sig4 -> . PUNTO TEXT resto inst resto

    PUNTO           shift and go to state 11


    sig3                           shift and go to state 12
    sig2                           shift and go to state 13
    sig4                           shift and go to state 14

state 8

    (4) global -> PUNTO GLOBAL . ETIQUETA

    ETIQUETA        shift and go to state 15



state 9

    (1) s -> resto sig1 .

    $end            reduce using rule 1 (s -> resto sig1 .)



state 10

    (126) resto -> FL resto .

    PUNTO           reduce using rule 126 (resto -> FL resto .)
    ETIQUETA        reduce using rule 126 (resto -> FL resto .)
    AND             reduce using rule 126 (resto -> FL resto .)
    ORR             reduce using rule 126 (resto -> FL resto .)
    EOR             reduce using rule 126 (resto -> FL resto .)
    ADD             reduce using rule 126 (resto -> FL resto .)
    SUB             reduce using rule 126 (resto -> FL resto .)
    RSB             reduce using rule 126 (resto -> FL resto .)
    MOV             reduce using rule 126 (resto -> FL resto .)
    CMP             reduce using rule 126 (resto -> FL resto .)
    MUL             reduce using rule 126 (resto -> FL resto .)
    MLA             reduce using rule 126 (resto -> FL resto .)
    LDR             reduce using rule 126 (resto -> FL resto .)
    STR             reduce using rule 126 (resto -> FL resto .)
    B               reduce using rule 126 (resto -> FL resto .)
    BEQ             reduce using rule 126 (resto -> FL resto .)
    BNE             reduce using rule 126 (resto -> FL resto .)
    BHI             reduce using rule 126 (resto -> FL resto .)
    BLS             reduce using rule 126 (resto -> FL resto .)
    BGE             reduce using rule 126 (resto -> FL resto .)
    BLT             reduce using rule 126 (resto -> FL resto .)
    BGT             reduce using rule 126 (resto -> FL resto .)
    BLE             reduce using rule 126 (resto -> FL resto .)
    $end            reduce using rule 126 (resto -> FL resto .)



state 11

    (5) sig2 -> PUNTO . DATA resto listazonadata
    (22) sig3 -> PUNTO . BSS resto listazonabss sig4
    (28) sig4 -> PUNTO . TEXT resto inst resto

    DATA            shift and go to state 18
    BSS             shift and go to state 17
    TEXT            shift and go to state 16



state 12

    (6) sig2 -> sig3 .

    $end            reduce using rule 6 (sig2 -> sig3 .)



state 13

    (3) sig1 -> global resto sig2 .

    $end            reduce using rule 3 (sig1 -> global resto sig2 .)



state 14

    (23) sig3 -> sig4 .

    $end            reduce using rule 23 (sig3 -> sig4 .)



state 15

    (4) global -> PUNTO GLOBAL ETIQUETA .

    FL              reduce using rule 4 (global -> PUNTO GLOBAL ETIQUETA .)



state 16

    (28) sig4 -> PUNTO TEXT . resto inst resto
    (126) resto -> . FL resto
    (127) resto -> . FL

    FL              shift and go to state 6


    resto                          shift and go to state 19

state 17

    (22) sig3 -> PUNTO BSS . resto listazonabss sig4
    (126) resto -> . FL resto
    (127) resto -> . FL

    FL              shift and go to state 6


    resto                          shift and go to state 20

state 18

    (5) sig2 -> PUNTO DATA . resto listazonadata
    (126) resto -> . FL resto
    (127) resto -> . FL

    FL              shift and go to state 6


    resto                          shift and go to state 21

state 19

    (28) sig4 -> PUNTO TEXT resto . inst resto
    (29) inst -> . ETIQUETA DP resto inst
    (30) inst -> . ETIQUETA DP instruccion resto inst
    (31) inst -> . instruccion resto inst
    (32) inst -> . fin
    (33) instruccion -> . AND REGISTRO COMA REGISTRO COMA REGISTRO
    (34) instruccion -> . AND REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
    (35) instruccion -> . AND REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
    (36) instruccion -> . AND REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (37) instruccion -> . AND REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
    (38) instruccion -> . ORR REGISTRO COMA REGISTRO COMA REGISTRO
    (39) instruccion -> . ORR REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
    (40) instruccion -> . ORR REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
    (41) instruccion -> . ORR REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (42) instruccion -> . ORR REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
    (43) instruccion -> . EOR REGISTRO COMA REGISTRO COMA REGISTRO
    (44) instruccion -> . EOR REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
    (45) instruccion -> . EOR REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
    (46) instruccion -> . EOR REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (47) instruccion -> . EOR REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
    (48) instruccion -> . ADD REGISTRO COMA REGISTRO COMA REGISTRO
    (49) instruccion -> . ADD REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
    (50) instruccion -> . ADD REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
    (51) instruccion -> . ADD REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (52) instruccion -> . ADD REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
    (53) instruccion -> . SUB REGISTRO COMA REGISTRO COMA REGISTRO
    (54) instruccion -> . SUB REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
    (55) instruccion -> . SUB REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
    (56) instruccion -> . SUB REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (57) instruccion -> . SUB REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
    (58) instruccion -> . RSB REGISTRO COMA REGISTRO COMA REGISTRO
    (59) instruccion -> . RSB REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
    (60) instruccion -> . RSB REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
    (61) instruccion -> . RSB REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (62) instruccion -> . RSB REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA
    (63) instruccion -> . MOV REGISTRO COMA REGISTRO
    (64) instruccion -> . MOV REGISTRO COMA ALMOADILLA DIRHEXA
    (65) instruccion -> . MOV REGISTRO COMA ALMOADILLA ENTERO
    (66) instruccion -> . MOV REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (67) instruccion -> . MOV REGISTRO COMA ALMOADILLA ETIQUETA
    (68) instruccion -> . CMP REGISTRO COMA REGISTRO
    (69) instruccion -> . CMP REGISTRO COMA ALMOADILLA DIRHEXA
    (70) instruccion -> . CMP REGISTRO COMA ALMOADILLA ENTERO
    (71) instruccion -> . CMP REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (72) instruccion -> . CMP REGISTRO COMA ALMOADILLA ETIQUETA
    (73) instruccion -> . MUL REGISTRO COMA REGISTRO COMA REGISTRO
    (74) instruccion -> . MLA REGISTRO COMA REGISTRO COMA REGISTRO
    (75) instruccion -> . LDR REGISTRO COMA CA REGISTRO COMA REGISTRO CC
    (76) instruccion -> . LDR REGISTRO COMA CA REGISTRO COMA ALMOADILLA DIRHEXA CC
    (77) instruccion -> . LDR REGISTRO COMA CA REGISTRO COMA ALMOADILLA ENTERO CC
    (78) instruccion -> . LDR REGISTRO COMA CA REGISTRO COMA ALMOADILLA ENTERONEGATIVO CC
    (79) instruccion -> . LDR REGISTRO COMA CA REGISTRO CC
    (80) instruccion -> . LDR REGISTRO COMA IGUAL ETIQUETA
    (81) instruccion -> . LDR REGISTRO COMA ETIQUETA
    (82) instruccion -> . STR REGISTRO COMA CA REGISTRO COMA REGISTRO CC
    (83) instruccion -> . STR REGISTRO COMA CA REGISTRO COMA ALMOADILLA DIRHEXA CC
    (84) instruccion -> . STR REGISTRO COMA CA REGISTRO COMA ALMOADILLA ENTERO CC
    (85) instruccion -> . STR REGISTRO COMA CA REGISTRO COMA ALMOADILLA ENTERONEGATIVO CC
    (86) instruccion -> . STR REGISTRO COMA CA REGISTRO CC
    (87) instruccion -> . STR REGISTRO COMA ETIQUETA
    (88) instruccion -> . B ETIQUETA
    (89) instruccion -> . B PUNTO ENTERO
    (90) instruccion -> . B PUNTO ENTERONEGATIVO
    (91) instruccion -> . B PUNTO DIRHEXA
    (92) instruccion -> . BEQ ETIQUETA
    (93) instruccion -> . BEQ PUNTO ENTERO
    (94) instruccion -> . BEQ PUNTO ENTERONEGATIVO
    (95) instruccion -> . BEQ PUNTO DIRHEXA
    (96) instruccion -> . BNE ETIQUETA
    (97) instruccion -> . BNE PUNTO ENTERO
    (98) instruccion -> . BNE PUNTO ENTERONEGATIVO
    (99) instruccion -> . BNE PUNTO DIRHEXA
    (100) instruccion -> . BHI ETIQUETA
    (101) instruccion -> . BHI PUNTO ENTERO
    (102) instruccion -> . BHI PUNTO ENTERONEGATIVO
    (103) instruccion -> . BHI PUNTO DIRHEXA
    (104) instruccion -> . BLS ETIQUETA
    (105) instruccion -> . BLS PUNTO ENTERO
    (106) instruccion -> . BLS PUNTO ENTERONEGATIVO
    (107) instruccion -> . BLS PUNTO DIRHEXA
    (108) instruccion -> . BGE ETIQUETA
    (109) instruccion -> . BGE PUNTO ENTERO
    (110) instruccion -> . BGE PUNTO ENTERONEGATIVO
    (111) instruccion -> . BGE PUNTO DIRHEXA
    (112) instruccion -> . BLT ETIQUETA
    (113) instruccion -> . BLT PUNTO ENTERO
    (114) instruccion -> . BLT PUNTO ENTERONEGATIVO
    (115) instruccion -> . BLT PUNTO DIRHEXA
    (116) instruccion -> . BGT ETIQUETA
    (117) instruccion -> . BGT PUNTO ENTERO
    (118) instruccion -> . BGT PUNTO ENTERONEGATIVO
    (119) instruccion -> . BGT PUNTO DIRHEXA
    (120) instruccion -> . BLE ETIQUETA
    (121) instruccion -> . BLE PUNTO ENTERO
    (122) instruccion -> . BLE PUNTO ENTERONEGATIVO
    (123) instruccion -> . BLE PUNTO DIRHEXA
    (124) fin -> . ETIQUETA DP B PUNTO resto PUNTO END
    (125) fin -> . B PUNTO resto PUNTO END

    ETIQUETA        shift and go to state 24
    AND             shift and go to state 40
    ORR             shift and go to state 42
    EOR             shift and go to state 23
    ADD             shift and go to state 35
    SUB             shift and go to state 22
    RSB             shift and go to state 44
    MOV             shift and go to state 43
    CMP             shift and go to state 29
    MUL             shift and go to state 27
    MLA             shift and go to state 25
    LDR             shift and go to state 30
    STR             shift and go to state 37
    B               shift and go to state 45
    BEQ             shift and go to state 28
    BNE             shift and go to state 39
    BHI             shift and go to state 32
    BLS             shift and go to state 34
    BGE             shift and go to state 46
    BLT             shift and go to state 33
    BGT             shift and go to state 26
    BLE             shift and go to state 38


    inst                           shift and go to state 36
    instruccion                    shift and go to state 41
    fin                            shift and go to state 31

state 20

    (22) sig3 -> PUNTO BSS resto . listazonabss sig4
    (24) listazonabss -> . ETIQUETA DP PUNTO SPACE enterohexa resto listazonabss
    (25) listazonabss -> . ETIQUETA DP PUNTO SPACE enterohexa resto

    ETIQUETA        shift and go to state 48


    listazonabss                   shift and go to state 47

state 21

    (5) sig2 -> PUNTO DATA resto . listazonadata
    (7) listazonadata -> . tipodata listazonadata
    (8) listazonadata -> . tipodata sig3
    (9) tipodata -> . equ rzd
    (10) tipodata -> . word listaword resto
    (14) equ -> . PUNTO EQU ETIQUETA COMA
    (15) word -> . ETIQUETA DP PUNTO WORD

    PUNTO           shift and go to state 54
    ETIQUETA        shift and go to state 53


    listazonadata                  shift and go to state 49
    word                           shift and go to state 50
    tipodata                       shift and go to state 51
    equ                            shift and go to state 52

state 22

    (53) instruccion -> SUB . REGISTRO COMA REGISTRO COMA REGISTRO
    (54) instruccion -> SUB . REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
    (55) instruccion -> SUB . REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
    (56) instruccion -> SUB . REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (57) instruccion -> SUB . REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA

    REGISTRO        shift and go to state 55



state 23

    (43) instruccion -> EOR . REGISTRO COMA REGISTRO COMA REGISTRO
    (44) instruccion -> EOR . REGISTRO COMA REGISTRO COMA ALMOADILLA DIRHEXA
    (45) instruccion -> EOR . REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERO
    (46) instruccion -> EOR . REGISTRO COMA REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (47) instruccion -> EOR . REGISTRO COMA REGISTRO COMA ALMOADILLA ETIQUETA

    REGISTRO        shift and go to state 56



state 24

    (29) inst -> ETIQUETA . DP resto inst
    (30) inst -> ETIQUETA . DP instruccion resto inst
    (124) fin -> ETIQUETA . DP B PUNTO resto PUNTO END

    DP              shift and go to state 57



state 25

    (74) instruccion -> MLA . REGISTRO COMA REGISTRO COMA REGISTRO

    REGISTRO        shift and go to state 58



state 26

    (116) instruccion -> BGT . ETIQUETA
    (117) instruccion -> BGT . PUNTO ENTERO
    (118) instruccion -> BGT . PUNTO ENTERONEGATIVO
    (119) instruccion -> BGT . PUNTO DIRHEXA

    ETIQUETA        shift and go to state 60
    PUNTO           shift and go to state 59



state 27

    (73) instruccion -> MUL . REGISTRO COMA REGISTRO COMA REGISTRO

    REGISTRO        shift and go to state 61



state 28

    (92) instruccion -> BEQ . ETIQUETA
    (93) instruccion -> BEQ . PUNTO ENTERO
    (94) instruccion -> BEQ . PUNTO ENTERONEGATIVO
    (95) instruccion -> BEQ . PUNTO DIRHEXA

    ETIQUETA        shift and go to state 63
    PUNTO           shift and go to state 62



state 29

    (68) instruccion -> CMP . REGISTRO COMA REGISTRO
    (69) instruccion -> CMP . REGISTRO COMA ALMOADILLA DIRHEXA
    (70) instruccion -> CMP . REGISTRO COMA ALMOADILLA ENTERO
    (71) instruccion -> CMP . REGISTRO COMA ALMOADILLA ENTERONEGATIVO
    (72) instruccion -> CMP . REGISTRO COMA ALMOADILLA ETIQUETA

    REGISTRO        shift and go to state 64



state 30

    (75) instruccion -> LDR . REGISTRO COMA CA REGISTRO COMA REGISTRO CC
    (76) instruccion -> LDR . REGISTRO COMA CA REGISTRO COMA ALMOADILLA DIRHEXA CC
    (77) instruccion -> LDR . REGISTRO COMA CA REGISTRO COMA ALMOADILLA ENTERO CC
    (78) instruccion -> LDR . REGISTRO COMA CA REGISTRO COMA ALMOADILLA ENTERONEGATIVO CC
    (79) instruccion -> LDR . REGISTRO COMA CA REGISTRO CC
    (80) instruccion -> LDR . REGISTRO COMA IGUAL ETIQUETA
    (81) instruccion -> LDR . REGISTRO COMA ETIQUETA

    REGISTRO        shift and go to state 65



state 31

    (32) inst -> fin .

    FL              reduce using rule 32 (inst -> fin .)



state 32

    (100) instruccion -> BHI . ETIQUETA
    (101) instruccion -> BHI . PUNTO ENTERO
    (102) instruccion -> BHI . PUNTO ENTERONEGATIVO
    (103) instruccion -> BHI . PUNTO DIRHEXA

    ETIQUETA        shift and go to state 67
    PUNTO           shift and go to state 66



state 33
